# FirsetPerson

./: CMakeLists.txt  README.md
src/: Functions.h  Input.c  Main.c  Map.c  Render.c  SimpleFP.h  Terminal.c  Utilities.c  firstPerson.h  functions.h  input.c  main.c  map.c  render.c  terminal.c  utilities.c
utils/: prototypes.sh
